fix(frontend): adjust z-index  to sit main-content below dropdown

--- a/frontend/src/components/layout/header/Header.css
+++ b/frontend/src/components/layout/header/Header.css
@@ -4,7 +4,7 @@ header {
   align-items: center;
   padding: 2rem;
 
-  z-index: 2;
+  z-index: 100;
 }
 
 header .logo-container {
@@ -237,6 +237,7 @@ header .header-actions .profile .dropdown {
 
   box-shadow: 0px 8px 16px 4px rgba(0,0,0,0.1);
 
+  z-index: 2000;
 }
 
 header .header-actions .profile .dropdown button {
